--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="raid_nyalotha">Ny\'alotha, the Waking City</string>
     <string name="raid_castle_nathria">Castle Nathria</string>
     <string name="raid_sanctum_of_domination">Sanctum of Domination</string>
+    <string name="raid_sepulcher_of_the_first_ones">Sepulcher of the First Ones</string>
 
     <!-- Difficulties-->
     <string name="difficulty_normal">Normal</string>
